[project]
name = "mistune-json"
version = "0.1.0"
description = ""
authors = [
    {name = "fernandonino",email = "nino.fernando@gmail.com"}
]
readme = "README.md"
license= "MIT"
requires-python = ">=3.12"
dependencies = [
    "mistune (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "mistune_json", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
