[project]
name = "mistune-json"
version = "0.1.0"
description = "A JSON renderer for the Mistune Markdown parser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["markdown", "json", "renderer", "mistune", "converter", "parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
authors = [
    {name = "fernandonino",email = "nino.fernando@gmail.com"}
]
dependencies = [
    "mistune (>=3.1.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "mistune_json", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.10"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "D101",   # pydocstyle undocumented-public-class
    "D102",   # pydocstyle undocumented-public-method
    "D103",   # pydocstyle undocumented-public-function
    "D105",   # pydocstyle undocumented-magic-method
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "ANN",    # flake8-annotations
]
ignore = [
    "ANN401", # any-type
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
